--- a/public/style.css
+++ b/public/style.css
@@ -47,7 +47,7 @@ h2 {
   flex: 1;
   overflow-y: auto;
   padding: 10px;
-  background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrGQafjTnuofcbb3CDHz77VUKJNFxeZqjkZagfjfALunwuyq25-g0EJO8K&s=10') no-repeat center center;
+  background: white;
   display: flex;
   flex-direction: column;
 }
@@ -123,11 +123,11 @@ input {
 }
 
 #name {
-  max-width: 80px;
+  max-width: 70px;
 }
 #message
 {
-  max-width:170px;
+  max-width:160px;
 }
 button {
   background: #f4f4f5;
