--- a/public/style.css
+++ b/public/style.css
@@ -47,7 +47,7 @@ h2 {
   flex: 1;
   overflow-y: auto;
   padding: 10px;
-  background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrGQafjTnuofcbb3CDHz77VUKJNFxeZqjkZagfjfALunwuyq25-g0EJO8K&s=10') no-repeat center center;
+  background: grey;
   display: flex;
   flex-direction: column;
 }
